<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProfessorFormActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="448dp"
        android:layout_height="71dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="108dp"
        android:layout_height="112dp"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toStartOf="@+id/topText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/teacher_icon" />

    <TextView
        android:id="@+id/topText2"
        android:layout_width="237dp"
        android:layout_height="84dp"
        android:layout_marginTop="48dp"
        android:text="@string/Prof_list"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />


    <EditText
        android:id="@+id/nom"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:background="@drawable/round_border"

        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/Nom"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintVertical_bias="0.065" />


    <EditText
        android:id="@+id/prenom"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:background="@drawable/round_border"

        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/prenom"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintVertical_bias="0.256" />


    <EditText
        android:id="@+id/departement"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:background="@drawable/round_border"

        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/departement"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintVertical_bias="0.434" />

    <EditText
        android:id="@+id/imageurl"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:background="@drawable/round_border"

        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/ImageURL"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintVertical_bias="0.625" />


    <Button
        android:id="@+id/okButton"
        android:layout_width="143dp"
        android:layout_height="51dp"
        android:text="Ajouter professeur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

</androidx.constraintlayout.widget.ConstraintLayout>